--- a/.github/workflows/prismacloud.yaml
+++ b/.github/workflows/prismacloud.yaml
@@ -21,3 +21,4 @@ jobs:
           PRISMA_API_URL: https://app2.eu.prismacloud.io/
         with:
           api-key: ${{ secrets.BC_API_KEY }}
+          soft_fail: true
